{
  "sourceLanguage" : "en",
  "strings" : {
    "Account Details" : {
      "comment" : "A section header that lists account details.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "账户：%@"
          }
        }
      }
    },
    "Balance" : {
      "comment" : "A label describing the user's account balance.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "余额"
          }
        }
      }
    },
    "Beneficiaries" : {
      "comment" : "A label for the list of beneficiaries on an account detail view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "受益人"
          }
        }
      }
    },
    "Branch" : {
      "comment" : "A label for the branch of a bank account.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "选择开始和结束日期，以查看特定时间段内的交易记录。"
          }
        }
      }
    },
    "Credit Card" : {
      "comment" : "Title of the credit card banking account type.",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "بطاقة ائتمان"
...
            "state" : "translated",
            "value" : "信用卡"
          }
        }
      }
    },
    "Current" : {
      "comment" : "Title for the \"Current\" banking account type.",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "جارٍ"
...
            "state" : "translated",
            "value" : "活期"
          }
        }
      }
    },
    "Done" : {
      "comment" : "A button that, when pressed, dismisses a sheet.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
          "state" : "translated",
          "value" : "Favorito"
        }
      }
    }
  },
    "From" : {
      "comment" : "A label for the \"From\" date picker.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "开户日期"
          }
        }
      }
    },
    "Product" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "المنتج"
          }
...
            "state" : "translated",
            "value" : "产品"
          }
        }
      }
    },
    "Recent Transactions" : {
      "comment" : "A section header indicating that the view displays recent transactions.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "重试"
          }
        }
      }
    },
    "Savings" : {
      "comment" : "Title of the savings account type.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "储蓄"
          }
        }
      }
    },
    "Select Account" : {
      "comment" : "The title of the view that lists a user's bank accounts.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "选择账户"
          }
        }
      }
    },
    "Select date range" : {
      "comment" : "A button that, when tapped, presents a sheet allowing the user to select a date range.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "选择日期范围"
          }
        }
      }
    },
    "Select Date Range" : {
      "comment" : "The title of the sheet that allows users to select a date range for viewing transaction history.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "定期"
          }
        }
      }
    },
    "To" : {
      "comment" : "A date picker label that indicates the end of a date range.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "尝试选择不同的时间范围。"
          }
        }
      }
    },
    "Type" : {
      "comment" : "A label describing the type of the account.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
