...
            accountDetailsSection
            transactionsSection
        }
        .navigationTitle(viewModel.isDisplayingTitle ? account.displayName : "")
        .toolbar {
            ToolbarItem {
                favoriteButton
            }
            ToolbarItemGroup(placement: .bottomBar) {
                Spacer()
                dateRangeButton
            }
        }
...
